tests/errors/compiler/case_not_in_switch/case_in_main.c
void main()
{
	case 1:
	{
		print(1);
	}
}
